# top200-rs

./: .copilotignore  .env copy.example  .env.backup.sqlx  .env.example  .gitignore  .mcp.json  .windsurfrules  CLAUDE.md  COPILOT.md  Cargo.toml  EXCHANGE_RATE_BUG_FIX.md  PERCENTAGE_CALCULATION_REVIEW.md  README.md  WEB_INTERFACE_PLAN.md  config.toml  data.db  data.db-wal  deny.toml  flake.nix  index.html  input.css  justfile  lefthook.yml  openhands.sh  package.json  pnpm-lock.yaml  rust-clippy-results.sarif  send_brevo_email.sh  styles.css  tailwind.config.js  top200.db  top200.db-journal  top200.db-shm  top200.db-wal
.claude/: settings.local.json
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.github/: copilot-instructions.md
.sqlx/: buildtest.db  query-03c60a1482bc0c1c3e52a64078f9daf4de220d19791f8bbcb09d6b5560c98943.json  query-2d7c638c493b05b3a2634b7720345a13b22faee8e61493ef96170619438f4f93.json  query-339a30e02ca1e89598dfcb961d8cf3a1a466a6c23ab6b6da3a6a7f4e06caf040.json  query-3bf9cef22e3b17b62339d615a1a09444006aada34847bbb67c63f2e5ad67a370.json  query-7055e93c22530e6cf8231507da909c9ae752785a040b87cf0e8798ce81bfb02b.json  query-7d150c605b3a9341e80fd8be0e148d70702d5e7d7b5f46922712b42117af4295.json  query-8c246053d4bad1e9c42a6ad0dee0623cb4eb122b04529b0a3a9f20cbf5031c88.json  query-a7f52e310c5420efc4f228fbc07cecac810309dff49fc1ffac3099bf088dd539.json  query-b590ae3e339921d22373887a89b99381fce01cc34303c27ffef443ee4c4f3c2d.json  (+8 more)
docs/: SECRET_MANAGER_SETUP.md  email-notifications.md  (+1 more)
(+172 files in other folders)
