[package]
name = "top200-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
dotenv = "0.15.0"
inquire = "0.6.2"
anyhow = "1.0.79"
chrono = "0.4.31"
csv = "1.3.0"
plotters = "0.3.5"
plotters-backend = "0.3.5"
dioxus = { version = "0.6.0-rc.0", features = ["web"] }
dioxus-web = "0.6.0-rc.0"
log = "0.4"
console_log = "1.0"
web-sys = { version = "0.3", features = ["console"] }
getrandom = { version = "0.2", features = ["js"] }
rusqlite = { version = "0.30.0", features = ["bundled"] }
